# mondai-db-api-trainer

./: AGENTS.md  README.md  commitlint.config.cjs  package-lock.json  package.json
.husky/: commit-msg  pre-commit
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/apps/auth/: __init__.py  admin.py  apps.py  models.py
backend/apps/auth/api/: serializers.py  urls.py  views.py
backend/apps/auth/migrations/: 0001_initial.py
backend/apps/auth/services/: __init__.py  auth_service.py
backend/apps/problems/: admin.py  models.py  prompts.py  ranking_service.py  services.py  urls.py  views.py
backend/apps/problems/management/: __init__.py
backend/apps/problems/management/commands/: maintain_stock.py
backend/apps/problems/migrations/: 0001_initial.py  0002_answer.py  0003_rename_primary_keys.py  0004_alter_problem_problem_id_and_more.py  0005_remove_unused_fields.py  0006_add_missing_models.py
backend/common/: error_codes.py  exception_handlers.py  exceptions.py  responses.py  validators.py
backend/common/ai/: gemini_client.py
backend/config/: settings.py  urls.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/CodeEditor/: CodeEditor.module.css  CodeEditor.tsx
frontend/src/components/DashboardCard/: DashboardCard.module.css  DashboardCard.tsx
frontend/src/components/Header/: Header.module.css  Header.tsx
frontend/src/components/RankingCard/: RankingCard.module.css  (+1 more)
frontend/src/contexts/: AuthContext.tsx  auth.ts  index.ts
(+26 files in other folders)
